# ctga

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile
cmake/: FindCLN.cmake
ctga/: CMakeLists.txt  main.cpp
ctga/dna/: CMakeLists.txt  base.cpp  base.hpp  pwm.cpp  pwm.hpp  sequence.cpp  sequence.hpp
ctga/gfd/: CMakeLists.txt  gutierez.cpp  gutierez.hpp  individual.cpp  individual.hpp  pwm_evaluator.cpp  pwm_evaluator.hpp
ctga/tools/: CMakeLists.txt  io.cpp  io.hpp  mann_whitney.cpp  mann_whitney.hpp  parser.cpp  parser.hpp  random_generator.cpp  random_generator.hpp  statistics.cpp  statistics.hpp
